@@ -246,6 +246,7 @@ function __autoload($className) {
 		'Language' => 'languages/Language.php',
 		'PasswordResetForm' => 'includes/SpecialResetpass.php',
 		'PatrolLog' => 'includes/PatrolLog.php',
+		'RandomPage' => 'includes/SpecialRandompage.php',
 
 		// API classes
 		'ApiBase' => 'includes/api/ApiBase.php',
